# shell-hell

./: README.md
bunster/: Makefile  cw.bash
crystal/: LICENSE  Makefile  shard.yml
crystal/src/: cw.cr
dotnet/: Makefile  Program.cs  cw.csproj
haskell/: LICENSE  cabal.project.freeze  cw.cabal
haskell/app/: Main.hs
kotlin/: .gitattributes  .gitignore  build.gradle.kts  settings.gradle.kts
kotlin/gradle/wrapper/: gradle-wrapper.properties
kotlin/src/nativeMain/kotlin/: Main.kt
odin/: Makefile  cw.odin
python/: Makefile  cw.py  pyproject.toml
racket/: Makefile  main.rkt
rust/: Cargo.toml
rust/src/: main.rs
scala/: .gitignore  Makefile  README.md  cw.scala
swift/: Makefile  Package.resolved  Package.swift  README.md
swift/Sources/: cw.swift
