cabal-version:      3.0
name:               cw
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             astynax
maintainer:         astynax@users.noreply.github.com
copyright:          astynax
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable cw
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.20.0.0
                    , shelly
                    , optparse-applicative
                    , text
    hs-source-dirs:   app
    default-language: GHC2024
