cabal-version:      3.0
name:               cw
description:        A word counting tool
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

executable cw
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.20.0.0
                    , shelly
                    , optparse-applicative
                    , text
    hs-source-dirs:   app
    default-language: GHC2024
